tests-integration/fixtures/checking/268_guarded_conditionals_checking/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
singleton ::
  forall (@f :: Type -> Type) (a :: Type).
    Build (f :: Type -> Type) => (a :: Type) -> (f :: Type -> Type) (a :: Type)
produce ::
  forall (@f :: Type -> Type) (a :: Type) (b :: Type).
    Build (f :: Type -> Type) =>
    ((b :: Type) -> (a :: Type)) -> (b :: Type) -> (f :: Type -> Type) (a :: Type)
identity :: forall (a :: Type). (a :: Type) -> (a :: Type)
test ::
  forall (f :: Type -> Type).
    Build (f :: Type -> Type) => Boolean -> Boolean -> (f :: Type -> Type) Boolean

Types
Build :: (Type -> Type) -> Constraint

Classes
class forall (f :: Type -> Type). Build (f :: Type -> Type)
  singleton ::
  forall (@f :: Type -> Type) (a :: Type).
    Build (f :: Type -> Type) => (a :: Type) -> (f :: Type -> Type) (a :: Type)
  produce ::
  forall (@f :: Type -> Type) (a :: Type) (b :: Type).
    Build (f :: Type -> Type) =>
    ((b :: Type) -> (a :: Type)) -> (b :: Type) -> (f :: Type -> Type) (a :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Build ?11
  --> 10:1..10:61
   |
10 | test :: forall f. Build f => Boolean -> Boolean -> f Boolean
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Build ?9
  --> 10:1..10:61
   |
10 | test :: forall f. Build f => Boolean -> Boolean -> f Boolean
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
